# mesh-crisis-response

./: .dockerignore  .gitignore  CRITICAL_FIX_APPLIED.md  DEBUGGING_GUIDE.md  DEPLOY_TO_HF_SPACES.md  Dockerfile  Dockerfile.phase1  FINAL_SUBMISSION_CHECK.sh  FINAL_VALIDATION.py  FIX_OPENENV_NOW.md  HF_SPACES_AUTH_GUIDE.md  LICENSE  PHASE_2_FIXES.md  PHASE_2_SUBMISSION_25_FIX.md  README.md  ROOT_CAUSE_AND_SOLUTION.md  SOLUTION_SUMMARY.md  SUBMISSION_FIXES.md  VALIDATOR_FIX_GUIDE.md  __init__.py  check_tasks_endpoint.py  client.py  diagnose_validator_issue.py  final_validator_simulation.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  simulate_validator_checks.py  tasks.py  test_5_tasks.py  test_api_endpoints.py  test_complete_graders.py  test_endpoints.py  test_endpoints_local.py  test_graders.py  test_graders_validation.py  test_score_ranges.py  (+2 more)
.github/workflows/: ci-cd.yml
agents/: __init__.py  advanced_agents.py  agents.py
docs/: ADVANCED_DOCUMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  __init__.py
ml/: __init__.py  benchmarks.py  enhanced_environment.py  metrics_dashboard.py  training_framework.py
server/: Dockerfile  __init__.py  app.py  app_bulletproof.py  app_minimal.py  app_new.py  app_phase1_minimal.py  conftest.py  dashboard.py  environment.py
tests/: test_environment.py
